# fluent

./: package-lock.json  package.json
crossref/: .gitignore  README.md  agent_config.yaml.example  prompts.py  pyproject.toml  run_all.py
crossref/agents/: __init__.py  _base.py  scholarbot.py  synthesizer.py  tubedigger.py  webscout.py
crossref/tools/: __init__.py  academic_search.py  web_search.py  youtube_search.py
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/generate-lesson/: route.ts
src/app/api/validate-license/: route.ts
src/components/: FluentLogo.tsx  LessonDisplay.tsx  LessonGenerator.tsx  MaintenanceOverlay.tsx  SavedLessons.tsx  SpeakButton.tsx
src/components/lesson/: GrammarSection.tsx  IdiomsSection.tsx  QuizSection.tsx  VocabularyCards.tsx
src/lib/: anthropic.ts  checkout.ts  license.ts  maintenance.ts  ratelimit.ts  sampleLesson.ts  savedLessons.ts  smoothScroll.ts  useDailyLimit.ts  useLicense.ts  videoId.ts  youtube.ts
src/lib/transcript/: direct.ts  index.ts  proxy.ts  supadata.ts
src/types/: lesson.ts
